updated the schedule with holidays

--- a/index.html
+++ b/index.html
@@ -222,6 +222,17 @@ or instructor permission
     <td>6</td>
     <td>Oct 13</td>
     <td>
+            Fall Weekend Holiday! 
+    </td>
+    
+    <td></td>
+    <td></td>
+</tr>
+
+<tr>
+    <td>7</td>
+    <td>Oct 20</td>
+    <td>
             <u> SLAM and Graph Optimization </u><br><br>
 	    <a href="http://rvsn.csail.mit.edu/content/eolson/graphoptim/eolson-graphoptim2006.pdf">Fast Iterative Alignment of Pose Graphs with Poor Initial Estimates</a>, Olson et al., International Conference on Robotics and Automation, 2006.
 	    <br> <br>
@@ -233,8 +244,8 @@ or instructor permission
 </tr>
 
 <tr>
-    <td>7</td>
-    <td>Oct 20</td>
+    <td>8</td>
+    <td>Oct 27</td>
     <td>
             <u> SLAM and Graph Optimization (continued) </u><br><br>
 	    <a href="http://www.cc.gatech.edu/~kaess/pub/Kaess08tro.pdf">iSAM: Incremental Smoothing and Mapping</a>, Kaess et al., IEEE Transactions on Robotics, 24(6) 2008.
@@ -247,8 +258,8 @@ or instructor permission
 </tr>
 
 <tr>
-    <td>8</td>
-    <td>Oct 27</td>
+    <td>9</td>
+    <td>Nov 3</td>
     <td>
             <u> Geometry Labeling from Sketching </u><br><br>
 	    <a href="http://cg.cs.tsinghua.edu.cn/papers/SIGASIA-2013-3sweep.pdf">3-Sweep: Extracting Editable Objects from a Single Photo</a>, Chen et al., ACM SIGGRAPH Asia, 2013.
@@ -262,8 +273,8 @@ or instructor permission
 </tr>
 
 <tr>
-    <td>9</td>
-    <td>Nov 3</td>
+    <td>10</td>
+    <td>Nov 10</td>
     <td>
             <u> Human-Robot Interaction for Manipulation </u><br><br>
 	    <a href="http://smartech.gatech.edu/bitstream/handle/1853/42279/Towards%20Grounding%20Concepts%20for%20Transfer%20in%20Goal%20Learning%20from%20Demonstration.pdf">Towards grounding concepts for transfer in goal learning from demonstration</a>, Chao et al., International Conference on Development and Learning, 2011.
@@ -277,8 +288,8 @@ or instructor permission
 </tr>
 
 <tr>
-    <td>10</td>
-    <td>Nov 10</td>
+    <td>11</td>
+    <td>Nov 17</td>
     <td>
             <u> SLAM and State Estimation </u><br><br>
 	    <a href="http://everobotics.org/pdf/SLAMTutorial.pdf">Simultaneous Localization and Mapping: Part 1</a>, Durrant-Whyte and Bailey, IEEE Robotics and Automation Magazine, June 2006.
@@ -292,10 +303,10 @@ or instructor permission
 </tr>
 
 <tr>
-    <td>11</td>
-    <td>Nov 17</td>
+    <td>12</td>
+    <td>Nov 24</td>
     <td>
-         Final project proposal presentations
+        Thanksgiving Break! 
     </td>
     <td>Hacking session on final project</td> 
     <td></td>
@@ -303,18 +314,9 @@ or instructor permission
 </tr>
 
 <tr>
-    <td>12</td>
-    <td>Nov 24</td>
-    <td>Thanksgiving Break</td>
-    <td></td> 
-    <td></td>
-    <td></td>
-</tr>
-
-<tr>
     <td>13</td>
     <td>Dec 1</td>
-    <td>Main project checkin meeting</td>
+    <td>Final project proposal presentations and main project checkin meeting</td>
     <td>Hacking session on final project</td> 
     <td></td>
     <td></td>
