added the project page, input data files, stencil code

--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
     <div id="headerMenu" class="yui3-menu yui3-menu-open yui3-menu-horizontal yui3-menu-fixed">
         <span class="yui3-menu-heading">BrownCSCI2951-P</span>
         <ul>
-            <li class="yui3-menu-active"><a href="#schedule">schedule</a></li>
+            <li class="yui3-menu-active"><a href="index.html">home</a></li>
             <li><a href="http://github.com/BrownCSCSCI2951-P/">github</a></li>
+            <li><a href="prelim_projects.html">prelim projects</a></li>
             <!--
             <li><a href="#assignment1">Project 1</a></li>
             <li><a href="#assignment2">Project 2</a></li>
