updated the images for the projects

--- a/prelim_projects.html
+++ b/prelim_projects.html
@@ -63,6 +63,7 @@
     <div class="content">
 <p>
     <h2>Project 1: Moving Least Squares</h2>
+    	<center><img width=600 src="resampling_1.jpg"></center>
             <p>
                 The objective of this project is to implement an algorithm to estimate the surface underlying a "point cloud" of 3D points.  This surface estimate allows for noisy points from sensors (e.g., laser rangefinding, depth camera) to be smoothened or downsampled.  For this purpose, you will implement the Moving Least Squares (MLS) algorithm for 2D point clouds, and adjust parameters for kernel weights, choice of polynomial functions, and sampling of surface query points.
             </p>
@@ -82,6 +83,7 @@
             </ol>
         </p>
     <h2>Project 2: Mapping by Odometry</h2>
+    	<center><img width=650 src="RGBD_map_matt.png"></center>
             <p>
                 The objective of this project is to build a simple 3D RGBD mapping system using odometry.  You become acquainted with 3D point cloud data and 3D geometric transforms.  These concepts will allow building a 3D map from a synchronized sequence of point cloud frames and robot odometry.  The implementation of this project will serve as the baseline for concepts in the course as well as the eventual mapping system you will produce this semester.
             </p>
@@ -104,7 +106,7 @@
         </p>
 
     <h2>Project 3: SGD SLAM</h2>
-        <img src="sgd-slam-example.png" width=500 style="border:5px solid black">
+        <center><img src="sgd-slam-example.png" width=500 style="border:5px solid black"></center>
         <h3>Objective:</h3>
         <p>The objective of this project is to implement a Simultaneous Localization and Mapping algorithm for estimating a robot's true trajectory from noisy odometry.  The Stochastic Gradient Descent algorithm will be used to perform SLAM as an optimization of the robot's pose graph to match poses that form a loop closure.  The input into this algorithm is a sequence of N robot poses and loop closures expressed as constraints between two poses.  The output will be the corrected N pose sequence, where each iteration of the displayed through some user interface. </p>
         <h3>Programming instructions:</h3>
