Images in prelim, dropbox link, presenters update

--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@ CIT Lubrano (Class session) and CIT 115 (Lab session)
 <h2>Mailing list:</h2>
 <a href="https://groups.google.com/forum/#!forum/cs2951p-hri-seminar">cs2951p-hri-seminar@googlegroups.com</a>
 
+<h2>Blogpost discussion:</h2>
+<a href="http://cs2951-hri-seminar.blogspot.com/">http://cs2951-hri-seminar.blogspot.com/</a>
+
 <h2>Optional Textbooks</h2>
 <p>
 <a href="http://www.robots.ox.ac.uk/~vgg/hzbook/">Multi-view Geometry in Computer Vision</a>, Hartley and Zisserman, Cambridge University Press, 2004.<br><br>
@@ -155,7 +158,7 @@ or instructor permission
     <td>Instructor</td> 
     <td>RGBD SLAM demos</td>
     <td><a href="https://www.dropbox.com/s/6ad74f0vz8vdcxn/cs2951p_fall2014_introduction.pdf?dl=0">Slides</a></td> 
-    <td>Prelim Projects 1, 2, 3 - Out</td> 
+    <td><a href="prelim_projects.html">Prelim Projects 1, 2, 3 - Out</a></td> 
 </tr>
 
 <tr>
@@ -174,10 +177,10 @@ or instructor permission
 	    <!--a href="http://infoscience.epfl.ch/record/149334/files/pauly_2003_SMP.pdf">Shape Modeling with Point-Sampled Geometry</a>, Pauly et al., ACM SIGGRAPH, 2003. -->
 	    
     </td>
-    <td></td> 
+    <td>Alexis<br><br>Carl</td> 
     <td>Introduction to Point Cloud Library</td> 
     <td></td>
-    <td>ROSBags data out</td>
+    <td></td>
 </tr>
 
 <tr>
