--- a/prelim_projects.html
+++ b/prelim_projects.html
@@ -63,7 +63,7 @@
     <div class="content">
 <p>
     <h2>Project 1: Moving Least Squares</h2>
-    	<center><img width=600 src="resampling_1.jpg"></center>
+    	<center><img width=600 src="MLS_fig1.png"></center>
             <p>
                 The objective of this project is to implement an algorithm to estimate the surface underlying a "point cloud" of 3D points.  This surface estimate allows for noisy points from sensors (e.g., laser rangefinding, depth camera) to be smoothened or downsampled.  For this purpose, you will implement the Moving Least Squares (MLS) algorithm for 2D point clouds, and adjust parameters for kernel weights, choice of polynomial functions, and sampling of surface query points.
             </p>
@@ -83,7 +83,7 @@
             </ol>
         </p>
     <h2>Project 2: Mapping by Odometry</h2>
-    	<center><img width=650 src="RGBD_map_matt.png"></center>
+    	<center><img width=650 src="photo.JPG"></center>
             <p>
                 The objective of this project is to build a simple 3D RGBD mapping system using odometry.  You become acquainted with 3D point cloud data and 3D geometric transforms.  These concepts will allow building a 3D map from a synchronized sequence of point cloud frames and robot odometry.  The implementation of this project will serve as the baseline for concepts in the course as well as the eventual mapping system you will produce this semester.
             </p>
@@ -92,8 +92,8 @@
         <p>
             For this project, you will implement a mapping system that reads in a sequence of point cloud files and an odometry text file and outputs the resulting map to an interactive 3D display.  The input point cloud files will be in the <a href="http://pointclouds.org/documentation/tutorials/pcd_file_format.php">Point Cloud Data (PCD)</a>.  The odometry text file will have a list 6 degree-of-freedom poses for the pose of the robot's camera (in the odometric frame) at each instance of the sequence.  This project requires implementation of an interactive GUI that can display 3D points and change viewpoints in real time.  Any programming language can be used for this assignment.  We recommend using the Point Cloud Library, a C++ library for processing point cloud data, to import PCD files and interactive visualization of the resulting map. You will be introduced to the data and the processing methods in a lab sessions. You will also have to show the results in the PCL visualizer which has the properties to place the point clouds spacially at the specified locations in 3D using transforms.
         </p>
-        <h3>Github link to the data and code:</h3>
-            <p>TBD</p>
+        <h3>Dropbox link to the data:</h3>
+            <p><a href="https://www.dropbox.com/sh/2kqt7nqv0i5kb0z/AADoeKqKoH7LwvYDgKJlOy9ya?dl=0">Dropbox<a></p>
 
         <h3>Implementation details:</h3>
         <p>
