--- a/index.html
+++ b/index.html
@@ -179,7 +179,9 @@ or instructor permission
     </td>
     <td>Instructor<br><br>Alexis<br><br>Carl</td> 
     <td>Introduction to Point Cloud Library</td> 
-    <td><a href="https://www.dropbox.com/s/a04brvibrfzsctr/cs2951p_fall2014_2_refresher.pdf?dl=0">Refresher Slides</a></td>
+    <td>
+    <br><a href="https://www.dropbox.com/s/a04brvibrfzsctr/cs2951p_fall2014_2_refresher.pdf?dl=0">Refresher Slides</a><br><br>
+    <a href="https://www.dropbox.com/s/1hg3rrd7l953d83/MLS%20Point%20Set%20Surfaces.pdf?dl=0">MLS Slides</a></td>
     <td></td>
 </tr>
 
