--- a/index.html
+++ b/index.html
@@ -181,20 +181,22 @@ or instructor permission
     <td>Introduction to Point Cloud Library</td> 
     <td>
     <br><a href="https://www.dropbox.com/s/a04brvibrfzsctr/cs2951p_fall2014_2_refresher.pdf?dl=0">Refresher Slides</a><br><br>
-    <a href="https://www.dropbox.com/s/1hg3rrd7l953d83/MLS%20Point%20Set%20Surfaces.pdf?dl=0">MLS Slides</a></td>
+    <a href="https://www.dropbox.com/s/1hg3rrd7l953d83/MLS%20Point%20Set%20Surfaces.pdf?dl=0">MLS</a><br><br>
+    <a href="https://www.dropbox.com/s/gba0idx2swgo6je/SLAMSGD.pdf?dl=0">SGD-SLAM</a></td>
     <td></td>
 </tr>
 
 <tr>
     <td>3</td>
     <td>Sept 22</td>
-    <td>
+    <td>Hacking session on Prelim Projects</td>
+    <!-- td>
 
             <u> Background </u><br><br>
 	    <a href="https://www.willowgarage.com/sites/default/files/icra11_0.pdf">3D is here: Point Cloud Library</a>, Rusu and Cousins, International Conference on Robotics and Automation, 2011.
         <br><br>
         <a href="http://citeseer.ist.psu.edu/viewdoc/summary?doi=10.1.1.87.5313">Visual Odometry</a>, Nister et al., Computer Vision and Pattern Recognition, 2004.
-    </td>
+    </td -->
     <td></td> 
     <td>Hacking session on Prelim Projects</td> 
     <td></td>
