--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ or instructor permission
         <br><br>
         <a href="http://www2.informatik.uni-freiburg.de/~endres/files/publications/endres13tro.pdf">3D Mapping with an RGB-D Camera</a> Endres et al., IEEE Transactions on Robotics, 30(1), 2014.
     </td>
-    <td></td> 
+    <td>Karthik<br><br>Matt</td> 
     <td>Hacking session on Prelim Projects</td> 
     <td></td>
     <td></td>
