updated the 3d mapping slides and next presenters

--- a/index.html
+++ b/index.html
@@ -214,7 +214,8 @@ or instructor permission
     </td>
     <td>Karthik<br><br>Matt</td> 
     <td>Hacking session on Prelim Projects</td> 
-    <td></td>
+    <td><a href="https://www.dropbox.com/s/sr5kjawoeq77q6z/RGBD-Mapping.pdf?dl=0">RGBD-Mapping_Henry</a><br><br>
+    <a href="https://www.dropbox.com/s/t64598vsahmhuos/RGBD-SLAM%20Paper.pdf?dl=0">3D Mapping_Endres</a></td>
     <td></td>
 </tr>
 
@@ -227,7 +228,7 @@ or instructor permission
         <br> <br>        
         <a href="http://vision.in.tum.de/_media/spezial/bib/engel14eccv.pdf">LSD-SLAM: Large-Scale Direct Monocular SLAM</a>, Engel et al., European Conference on Computer Vision (ECCV), 2014.
     </td>
-    <td></td> 
+    <td>Jun Ki Lee<br><br>Onur</td> 
     <td>Hacking session on Prelim Projects</td> 
     <td></td>
     <td></td>
