added presentations LSD and Unified papers

--- a/index.html
+++ b/index.html
@@ -230,7 +230,8 @@ or instructor permission
     </td>
     <td>Jun Ki Lee<br><br>Onur</td> 
     <td>Hacking session on Prelim Projects</td> 
-    <td></td>
+    <td><a href="https://www.dropbox.com/s/dn7rkxtp20ko5iw/On%20Unifying%20key-frame%20and%20voxel-based%20dense%20visual%20SLAM%20at%20large%20scales.pdf?dl=0">Unifying Key-frame and Voxel based SLAM</a><br><br>
+    <a href="https://www.dropbox.com/s/n5u5nngjxbdk9ec/CS2951%20-%20LSD-SLAM%20Paper%20Presentation.pdf?dl=0">LSD SLAM</a></td>
     <td></td>
 </tr>
 
@@ -256,7 +257,7 @@ or instructor permission
 	    <br> <br>
 	    <a href="http://www.roboticsproceedings.org/rss08/p40.pdf">Inference on networks of mixtures for robust robot mapping</a>, Olson and Agarwal, Robotics: Science and Systems, 2012.
     </td>
-    <td></td> 
+    <td>Lingzhu</td> 
     <td>Hacking session on SLAM project</td> 
     <td></td>
     <td></td>
