adding the presenters for next weeks presentation

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ or instructor permission
 	    <br> <br>
 	    <a href="http://www.roboticsproceedings.org/rss08/p40.pdf">Inference on networks of mixtures for robust robot mapping</a>, Olson and Agarwal, Robotics: Science and Systems, 2012.
     </td>
-    <td>Lingzhu</td> 
+    <td>Lingzhu<br><br>Zhiqiang</td> 
     <td>Hacking session on SLAM project</td> 
     <td></td>
     <td></td>
