changes to the scedule including PTAM and so on

--- a/index.html
+++ b/index.html
@@ -267,13 +267,13 @@ or instructor permission
     <td>8</td>
     <td>Oct 27</td>
     <td>
-            <u> Filtering-based SLAM</u><br><br>
-        <a href="http://everobotics.org/pdf/SLAMTutorial.pdf">Simultaneous Localization and Mapping: Part 1</a>, Durrant-Whyte and Bailey, IEEE Robotics and Automation Magazine, June 2006.
+            <u> 3D Reconstruction</u><br><br>
+        <a href="http://research.microsoft.com/pubs/155416/kinectfusion-uist-comp.pdf">KinectFusion: Real-time 3D Reconstruction and Interaction Using a Moving Depth Camera</a> Izadi et al, ACM UIST, 2011.
         <br> <br>
-        <a href="http://ai.stanford.edu/~koller/Papers/Montemerlo+al:AAAI02.pdf">FastSLAM: A Factored Solution to the Simultaneous Localization and Mapping Problem</a>, Montemerlo et al., AAAI, 2002.
+        <a href="http://www.robots.ox.ac.uk/~gk/publications/KleinMurray2007ISMAR.pdf">PTAM</a>, George Klein et al., ISMAR, 2007.
 
     </td>
-    <td></td> 
+    <td>Carl<br><br>Karthik</td>
     <td>Hacking session on SLAM project</td> 
     <td></td>
     <td></td>
@@ -287,8 +287,6 @@ or instructor permission
         <a href="http://cg.cs.tsinghua.edu.cn/papers/SIGASIA-2013-3sweep.pdf">3-Sweep: Extracting Editable Objects from a Single Photo</a>, Chen et al., ACM SIGGRAPH Asia, 2013.
 	    <br> <br>
 	    <a href="http://www.robots.ox.ac.uk/~phst/Papers/2007/SIGGRAPH/Siggraph07FinalSmall.pdf">VideoTrace: Rapid interactive scene modelling from video</a>, van den Hengel et al., ACM SIGGRAPH, 2007.
-        <br> <br>
-        <a href="http://research.microsoft.com/pubs/155416/kinectfusion-uist-comp.pdf">KinectFusion: Real-time 3D Reconstruction and Interaction Using a Moving Depth Camera</a> Izadi et al, ACM UIST, 2011.
         <br> <br>
         <a href="https://developers.google.com/kml/">KML - Keyhole Markup Language</a> tutorial and hands-on exercise.
     </td>
