--- a/index.html
+++ b/index.html
@@ -259,7 +259,8 @@ or instructor permission
     </td>
     <td>Lingzhu<br><br>Zhiqiang</td> 
     <td>Hacking session on SLAM project</td> 
-    <td></td>
+    <td><a href="h://www.dropbox.com/s/1hlajfemrwlgxwl/isam.pdf?dl=0">iSAM</a><br><br>
+    <a href="https://www.dropbox.com/s/auulqpi977b9irf/Max-Mixture%20Gaussian%20Model%20for%20SLAM.pdf?dl=0">Max-mixtures</a></td>
     <td></td>
 </tr>
 
