--- a/index.html
+++ b/index.html
@@ -276,7 +276,8 @@ or instructor permission
     </td>
     <td>Carl<br><br>Karthik</td>
     <td>Hacking session on SLAM project</td> 
-    <td></td>
+    <td><a href="https://www.dropbox.com/s/nsvzpje3azx3sbp/KinectFusion.pdf?dl=0">KinectFusion</a><br><br>
+    <a href="https://www.dropbox.com/s/d3cpydhnr9t02gm/PTAM.pdf?dl=0">PTAM</a></td>
     <td></td>
 </tr>
 
