--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ or instructor permission
         <br> <br>
         <a href="https://developers.google.com/kml/">KML - Keyhole Markup Language</a> tutorial and hands-on exercise.
     </td>
-    <td></td> 
+    <td>Karthik<br><br>Alexis</td> 
     <td>Hacking session on SLAM project</td> 
     <td></td>
     <td></td>
