adding presenters and slides

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ or instructor permission
     <td>9</td>
     <td>Nov 3</td>
     <td>
-            <u> Geometry by Annotation</u><br><br>
+        <u> Geometry by Annotation</u><br><br>
         <a href="http://cg.cs.tsinghua.edu.cn/papers/SIGASIA-2013-3sweep.pdf">3-Sweep: Extracting Editable Objects from a Single Photo</a>, Chen et al., ACM SIGGRAPH Asia, 2013.
 	    <br> <br>
 	    <a href="http://www.robots.ox.ac.uk/~phst/Papers/2007/SIGGRAPH/Siggraph07FinalSmall.pdf">VideoTrace: Rapid interactive scene modelling from video</a>, van den Hengel et al., ACM SIGGRAPH, 2007.
@@ -294,7 +294,7 @@ or instructor permission
     </td>
     <td>Karthik<br><br>Alexis</td> 
     <td>Hacking session on SLAM project</td> 
-    <td></td>
+    <td><a href="https://www.dropbox.com/s/0yfmenravdxnz2g/CSCI%202951-P%20Presentation%202.pdf?dl=0">VideoTrace</a></td>
     <td></td>
 </tr>
 
@@ -302,17 +302,19 @@ or instructor permission
     <td>10</td>
     <td>Nov 10</td>
     <td>
-            <u> Grasping and Affordances </u><br><br>
+        <u> Filter based SLAM </u><br><br>
+        <a href="http://robots.stanford.edu/papers/montemerlo.fastslam-tr.pdf">FastSLAM</a>, Michael Montemerlo et al, AAAI 2002.
+        <br>
+        <u> Grasping and Affordances </u><br><br>
         <a href="http://www.leilatakayama.org/downloads/Takayama.HitLGrasping_HRI2012_prepress.pdf">Strategies for Human-in-the-Loop Robotic Grasping</a>, Hsiao et., HRI, 2012.
         <br> <br>
         <a href="http://www.ccs.neu.edu/home/atp/publications/affordances_iser2014.pdf">Localizing Handle-like Grasp Affordances in 3D Point Clouds</a>, Platt et al., ISER 2014
         <br> <br>
-        <a href=https://github.com/swhart115/affordance_templates/wiki">NASA Valkyrie Affordance Templates</a>.  Paper draft available as hardcopy through course staff.
-    </td>
+        <a href="https://github.com/swhart115/affordance_templates/wiki">NASA Valkyrie Affordance Templates</a>.  Paper draft available as hardcopy through course staff.</td>
+    <td>Joey - FastSLAM</td> 
     <td></td> 
-    <td>SLAM project demos</td> 
     <td></td>
-    <td>Project 4 - SLAM due. Final Project out.</td>
+    <td></td>
 </tr>
 
 <tr>
