updated week 10 slides

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ or instructor permission
         <a href="https://github.com/swhart115/affordance_templates/wiki">NASA Valkyrie Affordance Templates</a>.  Paper draft available as hardcopy through course staff.</td>
     <td>Joey - FastSLAM</td> 
     <td></td> 
-    <td></td>
+    <td><a href="https://www.dropbox.com/s/lwox11fnykyawgn/FastSLAM%281%29.pdf?dl=0">FastSLAM</td>
     <td></td>
 </tr>
 
@@ -321,7 +321,8 @@ or instructor permission
     <td>11</td>
     <td>Nov 17</td>
     <td>
-            <u> Interfaces for Supervisory Control</u><br><br>
+        <u>Hacking session on final project</u>
+        <!--    <u> Interfaces for Supervisory Control</u><br><br>
 	    <a href="http://smartech.gatech.edu/bitstream/handle/1853/42279/Towards%20Grounding%20Concepts%20for%20Transfer%20in%20Goal%20Learning%20from%20Demonstration.pdf">Towards grounding concepts for transfer in goal learning from demonstration</a>, Chao et al., International Conference on Development and Learning, 2011.
         </br>
 	    <br> <br>
@@ -330,7 +331,7 @@ or instructor permission
         <a href="http://humanrobotinteraction.org/journal/index.php/HRI/article/view/149">The Robot Management System: A Framework for Conducting Human-Robot Interaction Studies Through Crowdsourcing</a>, Toris et al., Journal of Human-Robot Interaction, 3(2), 2014.
         <br><br>
         <a href="http://robotwebtools.org/pdf/2012_RAM_Alexander_Hsiao_Jenkins_Suay_Toris.pdf">Robot Web Tools [ROS Topics]</a>, Alexander et al., IEEE Robotics and Automation Magazine, 19(4), 2012.
-
+        -->
 
     </td>
     <td></td> 
