added last paper of the course

--- a/index.html
+++ b/index.html
@@ -355,8 +355,10 @@ or instructor permission
 <tr>
     <td>13</td>
     <td>Dec 1</td>
-    <td>Final project proposal presentations and main project checkin meeting</td>
-    <td></td> 
+    <td>
+        <a href="http://www.leilatakayama.org/downloads/Takayama.HitLGrasping_HRI2012_prepress.pdf">Strategies for Human-in-the-Loop Robotic Grasping</a>, Hsiao et., HRI, 2012.
+    </td>
+    <td>Joey</td> 
     <td>Hacking session on final project</td> 
     <td></td>
     <td></td>
