Last slides in place

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ or instructor permission
     </td>
     <td>Joey</td> 
     <td>Hacking session on final project</td> 
-    <td></td>
+    <td><a href="https://www.dropbox.com/s/3xpik1kq8ur3r67/Strategies%20for%20Human-in-the-Loop%20Robotic%20Grasping.pdf?dl=0">Strategies in Grasping</td>
     <td></td>
 </tr>
 
